# graphql-doc-gen

./: README.md  pyproject.toml  schema-docs.html  schema-docs.md  schema.json
graphql_doc_gen/: cli.py
graphql_doc_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
