[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphql-doc-gen"
version = "0.1.0"
description = "CLI: generate Markdown/HTML/PDF docs from a GraphQL introspection JSON"
readme = "README.md"
authors = [
  {name = "Aadhie", email = "aadhiesec@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
  "jinja2>=3.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=57.0"]  # optional, for PDF output

[project.scripts]
graphql-doc-gen = "graphql_doc_gen.cli:main"
